﻿- Fix NullreferenceException when selected prop pack is no longer subscribed to