@@ -84,5 +84,19 @@
         <replacement target="100 Speed Limit" replacement="1293188397.UK National Speed Limit Sign_Data" rotation="0" />
       </propReplacements>
     </replacementpack>
+    <replacementpack name="Italy road signs - PACK by Arnold J. Rimmer, Bsc. Ssc.">
+      <propReplacements>
+        <replacement target="30 Speed Limit" replacement="1685731764.ITA Max speed 30_Data" rotation="0" />
+        <replacement target="40 Speed Limit" replacement="1685731764.ITA Max speed 50_Data" rotation="0" />
+        <replacement target="50 Speed Limit" replacement="1685731764.ITA Max speed 50_Data" rotation="0" />
+        <replacement target="60 Speed Limit" replacement="1685731764.ITA Max speed 60_Data" rotation="0" />
+        <replacement target="100 Speed Limit" replacement="1685731764.ITA Max speed 80_Data" rotation="0" />
+        <replacement target="Stop Sign" replacement="1685731764.ITA Stop_Data" rotation="0" />
+        <replacement target="No Parking Sign" replacement="1685731764.ITA No parking_Data" rotation="0" />
+        <replacement target="Motorway Sign" replacement="1685731764.ITA Fast-traffic highway_Data" rotation="0" />
+        <replacement target="No Right Turn Sign" replacement="1685731764.ITA Drive straight or left_Data" rotation="0" />
+        <replacement target="No Left Turn Sign" replacement="1685731764.ITA Drive straight or right_Data" rotation="0" />
+      </propReplacements>
+    </replacementpack>
   </propPacks>
 </RoadSignReplacer>
