@@ -1,1 +1,2 @@
 ﻿- Fix NullreferenceException when selected prop pack is no longer subscribed to
+- Added support for 'Italy road signs - PACK' by Arnold J. Rimmer, Bsc. Ssc.
